--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "dependencies": {
         "bull": "^3.16.0",
         "chai-http": "^4.3.0",
+        "dotenv": "^16.4.7",
         "express": "^4.17.1",
         "image-thumbnail": "^1.0.10",
         "mime-types": "^2.1.27",
-        "mongodb": "^3.5.9",
+        "mongodb": "^3.7.4",
         "redis": "^3.1.2",
         "sha1": "^1.1.1",
         "uuid": "^8.2.0"
@@ -32,8 +33,8 @@
         "@babel/register": "^7.8.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint": "^8.57.1",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jest": "^28.11.0",
         "mocha": "^11.1.0",
